add SendMail  projects Api_pedidos
